Vitis_HLS/vitis_hls.log
INFO: [HLS 200-10] Running '/tools/Xilinx/Vitis_HLS/2022.1/bin/unwrapped/lnx64.o/vitis_hls'
INFO: [HLS 200-10] For user 'andresitocc99' on host 'andresitocc99-portatil' (Linux_x86_64 version 6.5.0-41-generic) on Tue Jul 09 14:32:33 CEST 2024
INFO: [HLS 200-10] On os Ubuntu 22.04.4 LTS
INFO: [HLS 200-10] In directory '/home/andresitocc99/Documentos/GitHub/SSEE_Xilinx/Vitis_HLS'
Sourcing Tcl script '/home/andresitocc99/Documentos/GitHub/SSEE_Xilinx/Vitis_HLS/Hyperspectral_DataFlow/solution1/csim.tcl'
INFO: [HLS 200-1510] Running: source /home/andresitocc99/Documentos/GitHub/SSEE_Xilinx/Vitis_HLS/Hyperspectral_DataFlow/solution1/csim.tcl
INFO: [HLS 200-1510] Running: open_project Hyperspectral_DataFlow 
INFO: [HLS 200-10] Opening project '/home/andresitocc99/Documentos/GitHub/SSEE_Xilinx/Vitis_HLS/Hyperspectral_DataFlow'.
INFO: [HLS 200-1510] Running: set_top hyperspectral_hw_wrapped 
INFO: [HLS 200-1510] Running: add_files ../Archivos_Fuente/Hyperspectral/DataFlow_2/hyperspectral_accel.cpp 
INFO: [HLS 200-10] Adding design file '../Archivos_Fuente/Hyperspectral/DataFlow_2/hyperspectral_accel.cpp' to the project
INFO: [HLS 200-1510] Running: add_files ../Archivos_Fuente/Hyperspectral/DataFlow_2/hyperspectral.h 
INFO: [HLS 200-10] Adding design file '../Archivos_Fuente/Hyperspectral/DataFlow_2/hyperspectral.h' to the project
INFO: [HLS 200-1510] Running: add_files -tb ../Archivos_Fuente/Hyperspectral/DataFlow_2/hyperspectral_test.cpp -cflags -Wno-unknown-pragmas -csimflags -Wno-unknown-pragmas 
INFO: [HLS 200-10] Adding test bench file '../Archivos_Fuente/Hyperspectral/DataFlow_2/hyperspectral_test.cpp' to the project
INFO: [HLS 200-1510] Running: add_files -tb ../Archivos_Fuente/Hyperspectral/DataFlow_2/cuboH.bin -cflags -Wno-unknown-pragmas -csimflags -Wno-unknown-pragmas 
INFO: [HLS 200-10] Adding test bench file '../Archivos_Fuente/Hyperspectral/DataFlow_2/cuboH.bin' to the project
INFO: [HLS 200-1510] Running: open_solution solution1 -flow_target vivado 
INFO: [HLS 200-10] Opening solution '/home/andresitocc99/Documentos/GitHub/SSEE_Xilinx/Vitis_HLS/Hyperspectral_DataFlow/solution1'.
INFO: [SYN 201-201] Setting up clock 'default' with a period of 10ns.
INFO: [HLS 200-1611] Setting target device to 'xczu3eg-sbva484-1-e'
INFO: [HLS 200-1505] Using flow_target 'vivado'
Resolution: For help on HLS 200-1505 see www.xilinx.com/cgi-bin/docs/rdoc?v=2022.1;t=hls+guidance;d=200-1505.html
INFO: [HLS 200-1510] Running: set_part xczu3eg-sbva484-1-e 
INFO: [HLS 200-1510] Running: create_clock -period 10 -name default 
INFO: [HLS 200-1510] Running: source ./Hyperspectral_DataFlow/solution1/directives.tcl
INFO: [HLS 200-1510] Running: set_directive_top -name hyperspectral_hw_wrapped hyperspectral_hw_wrapped 
INFO: [HLS 200-1510] Running: csim_design -quiet 
INFO: [SIM 211-2] *************** CSIM start ***************
INFO: [SIM 211-4] CSIM will launch GCC as the compiler.
   Compiling ../../../../../Archivos_Fuente/Hyperspectral/DataFlow_2/hyperspectral_accel.cpp in debug mode
../../../../../Archivos_Fuente/Hyperspectral/DataFlow_2/hyperspectral_accel.cpp: In function ‘void hyperspectral_hw_wrapped(hls::stream<hls::axis<ap_uint<32>, 4, 5, 5> >&, hls::stream<hls::axis<ap_uint<32>, 4, 5, 5> >&)’:
../../../../../Archivos_Fuente/Hyperspectral/DataFlow_2/hyperspectral_accel.cpp:120:44: error: no match for call to ‘(ap_uint<32>) ()’
         WORD_MEM w = in_stream.read().data();
                                            ^
In file included from /tools/Xilinx/Vitis_HLS/2022.1/include/ap_int.h:57,
                 from /tools/Xilinx/Vitis_HLS/2022.1/include/ap_fixed_base.h:62,
                 from /tools/Xilinx/Vitis_HLS/2022.1/include/ap_fixed.h:56,
                 from /tools/Xilinx/Vitis_HLS/2022.1/include/hls_hotbm_apfixed.h:42,
                 from /tools/Xilinx/Vitis_HLS/2022.1/include/hls_math.h:1065,
                 from ../../../../../Archivos_Fuente/Hyperspectral/DataFlow_2/hyperspectral_accel.cpp:1:
/tools/Xilinx/Vitis_HLS/2022.1/include/ap_int_base.h:1130:37: note: candidate: ‘ap_range_ref<_AP_W, _AP_S> ap_int_base<_AP_W, _AP_S>::operator()(int, int) [with int _AP_W = 32; bool _AP_S = false]’
   INLINE ap_range_ref<_AP_W, _AP_S> operator()(int Hi, int Lo) {
                                     ^~~~~~~~
/tools/Xilinx/Vitis_HLS/2022.1/include/ap_int_base.h:1130:37: note:   candidate expects 2 arguments, 0 provided
/tools/Xilinx/Vitis_HLS/2022.1/include/ap_int_base.h:1134:37: note: candidate: ‘ap_range_ref<_AP_W, _AP_S> ap_int_base<_AP_W, _AP_S>::operator()(int, int) const [with int _AP_W = 32; bool _AP_S = false]’
   INLINE ap_range_ref<_AP_W, _AP_S> operator()(int Hi, int Lo) const {
                                     ^~~~~~~~
/tools/Xilinx/Vitis_HLS/2022.1/include/ap_int_base.h:1134:37: note:   candidate expects 2 arguments, 0 provided
/tools/Xilinx/Vitis_HLS/2022.1/include/ap_int_base.h:1139:37: note: candidate: ‘template<int _AP_W2, bool _AP_S2, int _AP_W3, bool _AP_S3> ap_range_ref<_AP_W, _AP_S> ap_int_base<_AP_W, _AP_S>::operator()(const ap_int_base<_AP_W2, _AP_S2>&, const ap_int_base<_AP_W3, _AP_S3>&) [with int _AP_W2 = _AP_W2; bool _AP_S2 = _AP_S2; int _AP_W3 = _AP_W3; bool _AP_S3 = _AP_S3; int _AP_W = 32; bool _AP_S = false]’
   INLINE ap_range_ref<_AP_W, _AP_S> operator()(
                                     ^~~~~~~~
/tools/Xilinx/Vitis_HLS/2022.1/include/ap_int_base.h:1139:37: note:   template argument deduction/substitution failed:
../../../../../Archivos_Fuente/Hyperspectral/DataFlow_2/hyperspectral_accel.cpp:120:44: note:   candidate expects 2 arguments, 0 provided
         WORD_MEM w = in_stream.read().data();
                                            ^
In file included from /tools/Xilinx/Vitis_HLS/2022.1/include/ap_int.h:57,
                 from /tools/Xilinx/Vitis_HLS/2022.1/include/ap_fixed_base.h:62,
                 from /tools/Xilinx/Vitis_HLS/2022.1/include/ap_fixed.h:56,
                 from /tools/Xilinx/Vitis_HLS/2022.1/include/hls_hotbm_apfixed.h:42,
                 from /tools/Xilinx/Vitis_HLS/2022.1/include/hls_math.h:1065,
                 from ../../../../../Archivos_Fuente/Hyperspectral/DataFlow_2/hyperspectral_accel.cpp:1:
/tools/Xilinx/Vitis_HLS/2022.1/include/ap_int_base.h:1148:37: note: candidate: ‘template<int _AP_W2, bool _AP_S2, int _AP_W3, bool _AP_S3> ap_range_ref<_AP_W, _AP_S> ap_int_base<_AP_W, _AP_S>::operator()(const ap_int_base<_AP_W2, _AP_S2>&, const ap_int_base<_AP_W3, _AP_S3>&) const [with int _AP_W2 = _AP_W2; bool _AP_S2 = _AP_S2; int _AP_W3 = _AP_W3; bool _AP_S3 = _AP_S3; int _AP_W = 32; bool _AP_S = false]’
   INLINE ap_range_ref<_AP_W, _AP_S> operator()(
                                     ^~~~~~~~
/tools/Xilinx/Vitis_HLS/2022.1/include/ap_int_base.h:1148:37: note:   template argument deduction/substitution failed:
../../../../../Archivos_Fuente/Hyperspectral/DataFlow_2/hyperspectral_accel.cpp:120:44: note:   candidate expects 2 arguments, 0 provided
         WORD_MEM w = in_stream.read().data();
                                            ^
make: *** [csim.mk:80: obj/hyperspectral_accel.o] Error 1
ERROR: [SIM 211-100] 'csim_design' failed: compilation error(s).
INFO: [SIM 211-3] *************** CSIM finish ***************
INFO: [HLS 200-111] Finished Command csim_design CPU user time: 6.52 seconds. CPU system time: 0.44 seconds. Elapsed time: 5.45 seconds; current allocated memory: -1033.656 MB.
4
    while executing
"source /home/andresitocc99/Documentos/GitHub/SSEE_Xilinx/Vitis_HLS/Hyperspectral_DataFlow/solution1/csim.tcl"
    invoked from within
"hls::main /home/andresitocc99/Documentos/GitHub/SSEE_Xilinx/Vitis_HLS/Hyperspectral_DataFlow/solution1/csim.tcl"
    ("uplevel" body line 1)
    invoked from within
"uplevel 1 hls::main {*}$newargs"
    (procedure "hls_proc" line 16)
    invoked from within
"hls_proc [info nameofexecutable] $argv"
INFO: [HLS 200-112] Total CPU user time: 8.28 seconds. Total CPU system time: 0.91 seconds. Total elapsed time: 6.84 seconds; peak allocated memory: 132.543 MB.
